--- a/index.html
+++ b/index.html
@@ -1,19 +1,187 @@
 <html>
 <head>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap" rel="stylesheet">
 <script async="" src="https://flywidgets.com/app/pixel/6rzbv7bqju34ve3y1191ko5y27nvp094"></script>
 <style>
 h1 {text-align: center;}
 p {text-align: center;}
 div {text-align: center;}
+body {
+        font-family: 'Roboto', sans-serif;
+        font-size: 20px;
+        padding-top: 80px;
+        padding-right: 300px;
+        padding-bottom: 50px;
+        padding-left: 300px;
+}
+a {
+  color: rgb(145, 189, 187);
+}
 </style>
 </head>
 <body>
 <body style="background-color:gray;">
 
 
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
-<div>This is a div.</div>
+<h1>Mortals blog</h1>
+<p>Where I rant about random stuff</p>
+<p></p>
+<p></p>
+  <details style="" close="">
+    <summary style=""><b style="">Gaming culture and Cyberpunk 2077 (15.12.2020)</b></summary>
+    
+    <p></p>
+Cyberpunk 2077.... Where do I begin. I was actually kinda exited for this game. A love sandbox RPGs, rich stories, set in cyberpunk genre. But then i remembered.. made by polish studio, CD project RED, who made Witcher series. Yikes. Yikes?
+
+
+ But the witcher is praised as the best coming of gaming jesus!
+
+<p></p>
+
+Ok, lets start with CD project RED. They build there reputation as wholesome developer, amids evil companies as EA, and Activision blizzard. There PR strategy is strong, and they show themselfs as becan of hope in this evil greedy/predatory/gambling practicies of other studios. 
+
+They consiosly reinforce this sentiment with a lot of propaganda, here is one example:
+<p></p>
+<img src="https://i.redd.it/72qa1jqpjdzz.jpg" alt="Italian Trulli">
+
+<p></p>
+Honest company vs greedy companies. No catch, a bold statement. People love confident lies. Lets continue. :)
+
+<p></p>
+
+People liked how much content there was in witcher and how much content was added for free. 
+They also liked the expension buisness model, that completly died out in the last decade. 
+When others were imorting microtransactions and predatory practaces from mobile gaming industry, 
+Cd project red made long as game with long as expension for affordable price.
+People loved them as much as they hated others. Its a good mantality to bring people together. Hate, that is.
+
+<p></p>
+
+Lets be honest CD project Red is playing in the same field of free market capitalism as others. They are not different. But they sure want to look like it.
+
+<p></p>
+But most importantly the witcher 3 was generaly considered a good game. For me, fuck no. It has same problems as Cyberpunk 2077, so I will talk about them later.
+They stem from problems that are connected to who CD project RED is.
+
+<p></p>
+Not a lot of people know this, but in 2017 
+<a href="https://www.gamesradar.com/the-cyberpunk-2077-development-studio-addresses-silence-on-the-game-and-staff-leaving/"> a lot of key people left  CD project Red </a> becouse of the bad working conditions and <a href="https://www.thegamer.com/the-witcher-3-cyberpunk-2077-cdpr-cd-projekt-red-crunch/"> Poor pay/inhumane crunch </a>. When presented by this backlash they responded with abusive talk like: <a href="https://www.gamesindustry.biz/articles/2017-10-16-cd-projekt-red-responds-to-glassdoor-reviews"> "This approach to making games is not for everyone, </a> and 'It often requires a conscious effort to 'reinvent the wheel'.
+CD leads also sad that with 'close enough is good enough' attitude, you end up in a comfort zone. Funny how avoiding comfort zone means working <a href="https://www.tweaktown.com/news/75939/cd-projekt-red-devs-working-100-hour-work-weeks-on-cyberpunk-2077/index.html">100 hour work weeks </a> and 'reinventing the wheel means' making a copy of wither 3 in the 'future'.
+
+<p></p>
+
+And this system <a href="https://wccftech.com/cd-projekt-red-gets-7-million-government/"> awards </a> abusive mantality like this. As long as it makes <a href="https://www.pcgamer.com/cd-projekts-market-cap-breaks-16-billion-making-it-one-of-polands-biggest-companies/"> money </a>.
+
+It doesn't suprise anyone that people that enforce this kind of suffering are <a href="https://tvn24.pl/biznes/z-kraju/marszalek-senatu-tomasz-grodzki-powolal-rade-gospodarcza-na-czele-zbigniew-jakubas-4765630"> infeltrating local political scene </a>, and can do even more damage.
+
+
+
+Ok, so what does this constat pressure on workers that suffer every fucking day for years give us? 
+
+<p></p>
+
+A peace of shit game. Let's go.
+
+<p></p>
+
+Disclamer: I've played Cyberpunk to act 2. Fuck you, It's not just enough but too much
+<p></p>
+
+<b>
+Enpowering Abusment behide cyberpunk utopia. 
+</b>
+<p></p>
+
+Lets take a look for example GTA5. It has everything, including violence, sexism, rasim, sex work. But it is considered a critic of America. Why?
+Becouse it shows this issues with some kind of critic, and its absurdity. It shows hard to swollow stuff not just becouse it is what it is, but becouse it fits in overall narrative and ste struggles of people.
+Cyberpunk is nothing like that.
+Its clear that what cyberpunk wanted, (ignoring stupid propaganda of out of "confort zone invention"), is to copy the success of GTA 5.
+Hell, it is confirmed even to have free multiplayer (microtransactions?) year after realease just like GTA5.
+
+<p></p>
+So what is different with Cyberpunk and GTA5?
+Context. Cyberpunk puts you in a violent and sexist world without any underliying problem to solve. The only thing your caracter wants is to go "in the big leauges".
+<p></p>
+The fuck kinda answar is that? You kill people so you go into big leauges? Is this how humans work? Maybe if you work and do nothing else in CD project REDs offices, then you dont see that life is more then just working your ass off to get in "the big leagues". 
+<p></p>
+(I mean no offense to people working to survive)
+
+<p></p>
+Art mediums should not shy from taboo topics, but it takes a lot of responsibility to show them.
+To show them what they mean, and what effects do they have, how they maniveste and what can you do when they happens.
+That is the POINT of RPGs.
+To show these topics and have axccuse to say, well its world is like that, is like creating a racist parralel world where you can kill jews and say, well its not reality its a grim/dark fictional world. Stupid ass putas.
+
+<p></p>
+
+Its funny how we can compare perralel line to todays news. We are shown assults on gays, racist remarks on twitter. But nobady talks about where this shit came from. "World is like it is". There are just bad people and you try to surrvive. 
+Who would banifit from this?
+
+<p></p>
+
+World of cyberpunk is what it is and you cant change it. It is there for power fantasy. It is there so you can fight like a man and scream at people. 
+It is there so you can look at ass and tits and be a total edglord. It is made, simply put for incels.
+
+<p></p>
+
+<b>
+Its intentionly sexist, but trys to hide it behind cyberpunk utopia. 
+</b>
+<p></p>
+
+<p></p>
+Sexism underlys every corner of this game. You can change your boob size but you cant change body size.(who wants to play chuby guy am I right fellas) Man are mostly covered up while woman walk around like porn stars. Is this a joke?
+
+Rock bars where you have strippers? Is this a fucking westeren or a future? 
+Last time I checked the rock is dying and you are saying it is even more populare in the future?
+There is nothing futuristin/progressive about this game. Its like taking the worst stuff from current culture, and giving player control to abuse it. 
+
+
+<p></p>
+<b>Look on drugs</b>
+<p></p>
+
+Its funny how Cyberpunk looks on drugs. In the game I had an option to drink "tekila" with my mexian friend(yeah I shit you not). I denied. You know what happend. Its weak not to drink and you must  to toast on some sexy barteder.
+Alchohol is everywhere in this game. You are constatly force to drink like your life depends on it.
+But in the future there should be batter drugs then Alchohol right?? 
+Yeah... But pills are taken by reach "evil" elite, and some inhalliter kind of drugs are thaken by gangs. Alchohol is for "normal" working class people.
+A fucking joke.
+
+The more you think about it the more this shit looks like some kind of conservative idea of the future. Its not just repolsive, but also not depressive enough.
+
+<p></p>
+<b>Gameplay</b>
+<p></p>
+
+I'll very quickly talk about gameplay. It's shit.
+
+<p></p>
+
+<b>State of game industry</b>
+
+<p></p>
+
+Its sad that this game has 90+ on metacritic. Its sad that CD project red didnt allow reviewers to see copies of game on console(its unplayable). It is sad they didn't allow footage to be shown in reviews(its memeable). It is sad that they intentionly hyped the game up for it to sell as much copies as possible(fake advertisment).
+But the most sad thing is that people are so buisy talking about bugs and gampleay, that they ignore or dont see what toxic shit this game breeds and implies.
+
+<p></p>
+
+In the end the game <a href="https://wccftech.com/cd-projekt-red-gets-7-million-government/"> made shit ton of money </a>. Everybody talks about how bad the bugs are, and gameplay, 
+but nobady talks about how bad the story is, and how dangerous this game is for people that don't see the small but yet toxic connotations that it has.
+Generetion get poisend by this shit, while generetaion work there lifes away for this toxic shit to be spreading. Toxic breads toxic
+
+<p></p>
+
+<b>Who wins?</b>
+
+<p></p>
+
+Defenetly not people who belive going into "big leagues"
+
+<p></p>
+Morals out
+
 
 </body>
 </html>
