--- a/index.html
+++ b/index.html
@@ -72,16 +72,15 @@ They stem from problems that are connected to who CD project RED is.
 <p></p>
 Not a lot of people know this, but in 2017 
 <a href="https://www.gamesradar.com/the-cyberpunk-2077-development-studio-addresses-silence-on-the-game-and-staff-leaving/"> 
-  a lot of key people left  CD project Red </a> becouse of the bad working co
-  nditions and <a href="https://www.thegamer.com/the-witcher-3-cyberpunk-2077-cdpr-cd-projekt-red-crunch/"> Poor pay/inh
-    umane crunch </a>. When presented by this backlash they responded with ab
-    usive talk like: <a href="https://www.gamesindustry.biz/articles/2017-10-16-cd-projekt-red-responds-to-glassdoor-reviews"> "This app
-      roach to making games is not for everyone, </a> and 'It often requires a conscio
-      us effort to 'reinvent the wheel'.
+  a lot of key people left  CD project Red </a> becouse of the bad working conditions
+   and <a href="https://www.thegamer.com/the-witcher-3-cyberpunk-2077-cdpr-cd-projekt-red-crunch/"> Poor pay/inhumane
+     crunch </a>. When presented by this backlash they responded with abusive talk like:
+      <a href="https://www.gamesindustry.biz/articles/2017-10-16-cd-projekt-red-responds-to-glassdoor-reviews"> "This approach
+         to making games is not for everyone, </a> and 'It often requires a conscious effort to 'reinvent the wheel'.         
 CD leads also sad that with 'close enough is good enough' attitude, you end up in a comfort zone.
- Funny how avoiding comfort zone means wo
- rking <a href="https://www.tweaktown.com/news/75939/cd-projekt-red-devs-working-100-hour-work-weeks-on-cyberpunk-2077/index.html">100 hou
-  r work weeks </a> and 'reinventing the wheel means' making a copy of wither 3 in the 'future'.
+ Funny how avoiding comfort zone means working
+  <a href="https://www.tweaktown.com/news/75939/cd-projekt-red-devs-working-100-hour-work-weeks-on-cyberpunk-2077/index.html">100 hour
+     work weeks </a> and 'reinventing the wheel means' making a copy of wither 3 in the 'future'.
 
 <p></p>
 
