--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@ body {
         padding-left: 300px;
 }
 a {
-  color: rgb(145, 189, 187);
+  color: rgb(127, 144, 144);
 }
 </style>
 </head>
 <body>
-<body style="background-color:gray;">
+<body style="background-color:rgb(88, 87, 93);">
 
 
 <h1>Mortals blog</h1>
