--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@ Lets be honest CD project Red is playing in the same field of free-market capita
 They are not different. But they sure want to look like it.
 
 <p></p>
-But most importantly the witcher 3 was generally considered a good game. For me, fuck no. It has same problems as Cyberpunk 2077, so I will talk about them later.
-They stem from problems that are connected to who CD project RED is.
+But most importantly the witcher 3 was generally considered a good game. For me, fuck no.
 
 <p></p>
 Not a lot of people know this, but in 2017 
